syntax = "proto3";


message License
{
    int64 checksum = 1;
    int32 version = 2;

    // Since version 1:
    int32 num_trunk_ports = 3;
    int32 num_nontrunk_ports = 4;

    // Since version 2:
    int32 num_usb_ports = 5;

    // Since version 3:
    int32 num_nbaset_ports = 6;
}
